# AutoAPE-eda

./: Dockerfile  VERSION  build-eda.sh  eda.sh  pyproject.toml  requirements.txt  setup.py
conf/: eda-conf.xml
eda/: EDARunner.py
eda/common/: Common.py  Constants.py
eda/core/: EDAProcessor.py
eda/core/analyze/: FunctionInterface.py  FunctionsAbstract.py
eda/core/analyze/functions/: Average.py  Date.py  ImageShape.py  Kurtosis.py  Max.py  MaxLength.py  Min.py  MinLength.py  Noun.py  Skewness.py  Sum.py  TemplateExample.py  Unique.py  ValueRatio.py  Variance.py  Word.py
eda/core/analyze/functions/binomial/: Correlation.py  Covariance.py  MutualInformation.py
eda/core/analyze/functions/monomial/: Date.py  Kurtosis.py  Max.py  Min.py  MinLength.py  Noun.py  Sum.py  Unique.py  ValueRatio.py  Word.py
